# HaskellSTMbenchmark

./: .gitignore  CHANGELOG.md  HaskellSTMbenchmark.cabal  README  README.md  cabal.project
0-scripts/: plot1-SI.R  plotGraph.R  plotX-Set.R  scriptClean.sh  scriptCompile  scriptRun
1-SI/: IOSTM_Main.hs  Main.hs  Makefile
1-SharedInt/: Main.hs  readme
2-LL/: LLIOSTM.hs  LLSTM2.hs  Main.hs  MainIOSTM.hs  MainProf.hs  Makefile  TStats.hs  readme
2-LL/ioRefs/: LLIOREFS.hs  Main.hs  scriptExecution
2-LL/withUnread/: LLSTM2.hs  Main.hs  UnsafeSTM.hs
2-LL/withoutUnread/: LLSTM2.hs  Main.hs
3-BT/: BinaryTree.hs  Main.hs  MainProf.hs  Makefile  readme
3-BT/ioRefs/: BinaryTree.hs  Main.hs
3-BT/withUnread/: BinaryTree.hs  Main.hs
3-BT/withoutUnread/: BinaryTree.hs  Main.hs
4-HT/: Main.hs  Makefile
4-HT/Data/: THash.hs
4-HT/Data/THash/: THT.hs
4-HashTable/: Main.hs
4-HashTable/Data/THash/: THT.hs
5-TCache/: DynamicSample.hs  Main.hs  Sample.hs  Sample2.hs
5-TCache/Data/: TCache.hs
5-TCache/Data/TCache/: Dynamic.hs  Dynamic2.hs
6-ParallelSudoku/: Main.hs  SudokuWss2.hs  readme
7-CCHR/: Blockworld.cchr  Blockworld.hs  Gcd.cchr  Gcd.hs  HomePage.txt  Prime.cchr  Prime.hs  Sudoku.cchr  Sudoku.hs  Unionfind.cchr  Unionfind.hs  UsageInstructions  outputRun.txt  scriptCleanAll  scriptCompileAll  scriptExecutionBlockworld  scriptExecutionGCD  scriptExecutionPrime  scriptExecutionSudoku  scriptExecutionUnionfind
7-CCHR/CCHR/: .#CCHRSolver.hs  CCHRCommandLine.hs  CCHRCore.hs  CCHRSolver.hs  CCHRStore.hs  TList.hs
7-CCHR/CCHR/Control/: Cont.hs  Error.hs  Fix.hs  RWS.hs  Reader.hs  State.hs  Trans.hs  Writer.hs
7-CCHR/CCHRCompiler/: CCHRCompiler.hs  CCHRLexer.hs  CCHRParser.hs  CCHRParser.ly
8-spi/: readme
8-spi/examples/Biological/: NOTES  cell.spi  cell.spi-hs-p.csv  clock.spi  clock.spi-hs-p.csv  clock.spi-hs.csv  clock.spi.csv  counters.txt  feedback.spi  lambda.spi  lambda.spi-hs-p.csv  mapk.spi  mapk.spi-hs-p.csv  mapk2.spi  mapk2.spi-hs-p.csv  mapk2.spi.csv  mapk3.spi  mapk3.spi-hs-p.csv  mapk3.spi.~1.2.~  repressilator.spi  repressilator.spi-1.csv  repressilator.spi-10.csv  repressilator.spi-hs-p.csv  repressilator.spi-spim-100.csv  repressilator.spi.csv  repressilator.spi.~2~  repressilator.spi.~3~  repressilator.spi.~4~  repressilator2.spi  repressilator2.spi-hs-p.csv  tmp.csv
8-spi/examples/Biological/CVS/: Entries  Repository
8-spi/examples/CVS/: Entries  Repository
8-spi/examples/Chemical/: ethylene.spi  ethylene.spi-hs-p.csv  hcl.spi  hcl.spi-hs-p.csv  hh.spi  hh.spi-hs-p.csv  kna2cl.spi  kna2cl.spi-hs-p.csv  mg2cl.spi  mg2cl.spi-hs-p.csv  nacl.spi  nacl.spi-hs-p.csv  nacl.spi.csv  nacl.spi.~1~  rnhcor.spi  rnhcor.spi-hs-p.csv
8-spi/examples/Chemical/CVS/: Entries  Repository
8-spi/examples/Functional/: booleans.spi  functions.spi  lists.spi  operators.spi  trees.spi
8-spi/examples/Functional/CVS/: Entries  Repository  Root
8-spi/examples/gillespie/: decay1.spi  decay1.spi-hs-p.csv  decay1.spi-hs.csv  decay2.spi  lotka1.spi  lotka2-Fig10b.spi.csv  lotka2-Fig11b.spi.csv  lotka2.spi  lotka3-Fig12.spi.csv  lotka3.spi  lotka3.spi.csv  lotka4.spi  oregonator1-24.spi.csv  oregonator1-24b.spi.csv  oregonator1.spi  oregonator2-26.spi.csv  oregonator2.spi  oregonator3-27.spi.csv  oregonator3.spi
8-spi/examples/gillespie/CVS/: Entries  Repository
8-spi/impl/: Chan.hs  Compile.hs  Main.hs  Makefile  Parser.hs  RunSoup.hs  Soup.hs
8-spi/parallel/: Cell.hs  Chan.hs  Compile.hs  Event.hs  Main.hs  Makefile  Notes  RunSoup.hs  Soup.hs  test.spi  test.spi-hs-p.csv
X-Set/: AbstractLock.hs  STMSet.hs  TBList.hs  TestSet.hs  TestSetIOSTM.hs
